--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,15 @@ dependencies {
     //part4 add
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    //part 16
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+    //part21
+    implementation 'com.github.shts:StoriesProgressView:3.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 
 }
