--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,13 @@ buildscript {
 
     }
 
-
+    allprojects {
+        repositories {
+            google()
+            jcenter()
+            maven { url "https://jitpack.io" }
+        }
+    }
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
